[package]
name = "hrs"
version = "0.2.0"
edition = "2021"
authors = ["Fitti <dev@fitti.io>"]
description = "A tiny tool to create Rust projects even faster."
repository = "https://github.com/Fittiboy/hrs"
license = "GPL-3.0-or-later"
keywords = ["utility", "projects", "command-line"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "hrs"

[dependencies]
anyhow = "1.0.70"
clap = "4.2.1"
dirs = "5.0.0"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
